RESOLVED FIXED 225416
imported/w3c/web-platform-tests/eventsource/format-utf-8.htm is failing on some platforms
https://bugs.webkit.org/show_bug.cgi?id=225416
Summary imported/w3c/web-platform-tests/eventsource/format-utf-8.htm is failing on so...
Chris Dumez
Reported 2021-05-05 14:09:12 PDT
imported/w3c/web-platform-tests/eventsource/format-utf-8.htm is failing on some platforms: DIFF: +CONSOLE MESSAGE: EventSource's response has a charset ("windows-1252") that is not UTF-8. Aborting the connection. -PASS EventSource: always UTF-8 +FAIL EventSource: always UTF-8 assert_unreached: Got error event Reached unreachable code
Attachments
Patch (4.76 KB, patch)
2021-05-05 14:21 PDT, Chris Dumez
no flags
Patch (6.42 KB, patch)
2021-05-05 19:59 PDT, Chris Dumez
youennf: review+
Chris Dumez
Comment 1 2021-05-05 14:09:23 PDT
Radar WebKit Bug Importer
Comment 2 2021-05-05 14:09:33 PDT
Chris Dumez
Comment 3 2021-05-05 14:21:43 PDT
Chris Dumez
Comment 4 2021-05-05 19:59:56 PDT
youenn fablet
Comment 5 2021-05-05 23:57:43 PDT
Comment on attachment 427843 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=427843&action=review > Source/WebCore/ChangeLog:3 > + imported/w3c/web-platform-tests/eventsource/format-utf-8.htm Title could be improved
Chris Dumez
Comment 6 2021-05-06 07:49:29 PDT
(In reply to youenn fablet from comment #5) > Comment on attachment 427843 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=427843&action=review > > > Source/WebCore/ChangeLog:3 > > + imported/w3c/web-platform-tests/eventsource/format-utf-8.htm > > Title could be improved LOL, not sure what happened there :o)
Chris Dumez
Comment 7 2021-05-06 07:52:20 PDT
Alexey Proskuryakov
Comment 8 2021-05-06 18:23:23 PDT
Yay to changing specs! </sarcasm> cf. bug 56942.
Note You need to log in before you can comment on or make changes to this bug.