imported/w3c/web-platform-tests/eventsource/format-utf-8.htm is failing on some platforms https://bugs.webkit.org/show_bug.cgi?id=225416 <rdar://77529801>

Reviewed by Youenn Fablet.

Source/WebCore:

The HTML specification [1] states that EventSource streams should always be decoded as UTF-8.
However, we had logic in WebKit that was checking the charset of the response and aborting
when the charset is not UTF-8. It looks like we were lucky until now that we would fail to
determine the charset of the response and proceed anyway. However, due to underlying system
changes, in the context of this test, we are now properly detecting the response charset as
"windows-1252" and (incorrectly) aborting. To address the issue, I no longer abort the
connection if the charset is not "utf-8". We do still log a console warning but we proceed
decoding the stream as UTF-8 no matter the response's charset, as per the specification.

[1] https://html.spec.whatwg.org/multipage/server-sent-events.html#event-stream-interpretation

No new tests, covered by existing test that is failing on some platforms.

* page/EventSource.cpp:
(WebCore::EventSource::responseIsValid const):

LayoutTests:

Dump JS Console messages to stderr for this test as it will only get logged on some
platforms.

* TestExpectations:

Canonical link: https://commits.webkit.org/237390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277087 268f45cc-cd09-0410-ab3c-d52691b4dbfc